<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Rap Battle Online</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="usernameEmail">Username or Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_loggedin">LoggedinActivity</string>
    <string name="SignIn">Sign In</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="notRegistered">Not Registered Yet?</string>
    <string name="signUp">Sign Up Now!</string>
    <string name="terms">Terms</string>
    <string name="copyright">Copyright</string>
    <string name="noLoginInformation">Login Information Has Not Been Set.</string>
    <string name="noUsername">No Username was Entered!</string>
    <string name="noPassword">No password was entered.</string>
    <string name="invalidCredentials">Username/Email or password is incorrect! Please try again.</string>
    <string name="email">Email</string>
    <string name="back">Back</string>
    <string name="register">Register</string>
    <string name="noEmail">No Email Entered.</string>
    <string name="successRegitration">You have successfully signed up.  You may now login.</string>
    <string name="errorRegistration">An Error Occurred in the registration Process.</string>
    <string name="title_activity_private_messages">PrivateMessagesActivity</string>
    <string name="unreadMessages">Unread Messages</string>
    <string name="welecomeBack">Welcome Back</string>
    <string name="daysAgo">days ago</string>
    <string name="subject">Subject</string>
    <string name="from">From</string>

</resources>
